# HeicConverter

./: .gitignore  LICENSE  Readme.md  converter.py  heicConverter.py  heicConverterGui.py  heic_gui_settings.json  pyproject.toml  requirements.txt  test_converter.py
lang/: de.json  zh.json
test/: create_test_heic.py  test_no_exif.heic
