[project]
name = "heicconverter"
version = "0.1.0"
description = " A very simple command line tool to convert heic files to jpg"
readme = "Readme.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = [
    "pillow>=9.2.0",
    "pillow_heif>=0.18.0",
    "piexif==1.1.3",
    "tkinterdnd2>=0.3.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
]
